--- a/index.html
+++ b/index.html
@@ -1,18 +1,344 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1> Hello from Bootstrap </h1>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="G:\Najib Web\All Web projects\Bootstrap practice\CSS\bootstrasp\css\bootstrap.min.css">
+</head>
+
+<body>
+    <h1>Hello Najib You have done it, by the grace of almighty Allah</h1>
+
+    <h1>Background color</h1>
+
+
+    <h2 class="bg-primary text-white">bg-primary</h2>
+    <h2 class="bg-secondary text-white">bg-secondary</h2>
+    <h2 class="bg-success text-white">bg-success</h2>
+    <h2 class="bg-danger text-white">bg-danger</h2>
+    <h2 class="bg-warning text-white"> bg-warning</h2>
+    <h2 class="bg-info text-white">bg-info</h2>
+    <h2 class="bg-light text-black">bg-light</h2>
+    <h2 class="bg-dark text-white">bg-dark</h2>
+    <h2 class="bg-transparent text-black">bg-transparent</h2>
+
+
+
+    <h1>Border border-color border-width</h1>
+
+
+    <div class="f1 border border-primary border-1"></div>
+    <div class="f1 border border-secondary border-2"></div>
+    <div class="f1 border border-success border-3"></div>
+    <div class="f1 border border-danger border-4"></div>
+    <div class="f1 border border-warning border-5"></div>
+    <div class="f2 border border-info border-5"></div>
+
+    <h1>Border radious</h1>
+
+    <div class="f1 border border-primary border-1 rounded"></div>
+    <div class="f1 border border-secondary border-2 rounded-top "></div>
+    <div class="f1 border border-success border-3 rounded-bottom "></div>
+    <div class="f1 border border-danger border-4 rounded-start"></div>
+    <div class="f1 border border-warning border-5 rounded-end"></div>
+    <div class="f1 border border-primary border-5 rounded-circle"></div>
+    <div class="f4 border border-success border-5 rounded-pill"></div>
+
+
+
+    <h1>Colors</h1>
+
+    <p class="text-primary">text-primary</p>
+    <p class="text-secondary">text-secondary</p>
+    <p class="text-success">text-success</p>
+    <p class="text-warning">text-warning</p>
+    <p class="text-danger text-opacity-75"> text-danger</p>
+    <p class="text-info">text-info</p>
+    <p class="text-light bg-black ">text-light</p>
+    <p class="text-white bg-black">text-white</p>
+
+
+
+
+    <div class="d-inline bg-primary text-white p-2">d-inline</div>
+    <div class="d-inline bg-secondary text-white p-2">d-inline</div>
+    <div class="d-inline bg-success text-white p-2 ">d-inline</div>
+
+
+
+
+    <div class="d-block bg-primary text-white p-2 mt-5">d-block</div>
+    <div class="d-block bg-secondary text-white p-2">d-inline</div>
+    <div class="d-block bg-success text-white p-2">d-inline</div>
+
+
+    <div class="d-inline-block bg-primary text-white p-2 mt-5">d-inline-block</div>
+    <div class="d-inline-block bg-secondary text-white p-2">d-inline</div>
+    <div class="d-inline-block bg-success text-white p-2">d-inline</div>
+
+
+
+
+    <div class="d-grid bg-primary text-white p-2 mt-5">d-grid</div>
+    <div class="d-grid bg-secondary text-white p-2">d-inline</div>
+    <div class="d-grid bg-success text-white p-2">d-inline</div>
+
+
+
+
+    <div class="d-table bg-primary text-white p-2 mt-5">d-table</div>
+    <div class="d-table bg-secondary text-white p-2">d-inline</div>
+    <div class="d-table bg-success text-white p-2 mb-5">d-inline</div>
+
+
+    <div class="d-table-cell bg-primary text-white p-2 mt-5">d-table-cell</div>
+    <div class="d-table-cell bg-secondary text-white p-2 ">d-inline</div>
+    <div class="d-table-cell bg-success text-white p-2 mb-5">d-inline</div>
+
+
+
+    <div class="d-table-row bg-primary text-white p-2 mt-5">d-table-row</div>
+    <div class="d-table-row bg-secondary text-white p-2 ">d-inline</div>
+    <div class="d-table-row bg-success text-white p-2 ">d-inline</div>
+
+
+
+
+    <div class="d-flex bg-primary text-white p-2 mt-5">d-flex</div>
+    <div class="d-flex bg-secondary text-white p-2 ">d-inline</div>
+    <div class="d-flex bg-success text-white p-2 ">d-inline</div>
+
+
+    <div class="d-inline-flex bg-primary text-white p-2 mt-5">d-inline-flex</div>
+    <div class="d-inline-flex bg-secondary text-white p-2 ">d-inline</div>
+    <div class="d-inline-flex bg-success text-white p-2 ">d-inline</div>
+
+
+
+
+
+
+    <div class="alert alert-danger mt-5" role="alert">
+        A simple primary alert—check it out!
+    </div>
+
+
+
+
+
+    <h1>Heading h1 <span class="badge bg-secondary">New</span></h1>
+    <h2>Heading h2 <span class="badge bg-secondary">New</span></h2>
+    <h3>Heading h3 <span class="badge bg-secondary">New</span></h3>
+    <h4>Heading h4 <span class="badge bg-secondary">New</span></h4>
+    <h5>Heading h5 <span class="badge bg-secondary">New</span></h5>
+    <h6>Heading h6 <span class="badge bg-secondary">New</span></h6>
+
+
+
+    <button type="button" class="btn btn-primary m-2">
+        Notification
+        <span class="badge bg-secondary" >4</span>
+
+
+    </button>
+
+
+
+
+    <button type="button" class="btn btn-primary m-2 position-relative">
+       Inbox
+        <span class="badge bg-danger position-absolute top-0 start-100 rounded-pill translate-middle" >99+</span>
+
+
+    </button>
+
+
+    <button type="button" class="btn btn-primary m-2 position-relative">
+        Profile
+         <span class="badge bg-danger position-absolute top-0 start-100 rounded-circle border border-light translate-middle p-2" >
+
+             <span class="visually-hidden" >New alerts</span>
+         </span>
+ 
+ 
+     </button>
+
+
+    <h1>Button Group</h1>
+
+    <div class="btn-group m-2" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-primary">Left</button>
+        <button type="button" class="btn btn-primary">Middle</button>
+        <button type="button" class="btn btn-primary">Right</button>
+
+
+    </div>
+
+
+
+    <div class="btn-group m-2" role="group" aria-label="Basic mixed styles example">
+        <button type="button" class="btn btn-danger">Left</button>
+        <button type="button" class="btn btn-warning">Middle</button>
+        <button type="button" class="btn btn-success">Right</button>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+    <div class="btn-group m-2" role="group" aria-label="Basic outlined example">
+        <button type="button" class="btn btn-outline-primary">Left</button>
+        <button type="button" class="btn btn-outline-primary">Middle</button>
+        <button type="button" class="btn btn-outline-primary">Right</button>
+
+
+    </div>
+
+
+    <div class="btn-group m-2" role="group" aria-label="Basic checkbox toggle button group">
+        <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btncheck1">Checkbox 1</label>
+
+        <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btncheck2">Checkbox 2</label>
+
+        <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btncheck3">Checkbox 3</label>
+    </div>
+
+
+
+
+
+
+    <div class="btn-group m-2" role="group" aria-label="Basic radio toggle button group">
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+        <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
+
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
+
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
+    </div>
+
+
+
+    <div class="btn-toolbar m-2" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group me-2" role="group" aria-label="First group">
+            <button type="button" class="btn btn-primary">1</button>
+            <button type="button" class="btn btn-primary">2</button>
+            <button type="button" class="btn btn-primary">3</button>
+            <button type="button" class="btn btn-primary">4</button>
+        </div>
+        <div class="btn-group me-2" role="group" aria-label="Second group">
+            <button type="button" class="btn btn-secondary">5</button>
+            <button type="button" class="btn btn-secondary">6</button>
+            <button type="button" class="btn btn-secondary">7</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Third group">
+            <button type="button" class="btn btn-info">8</button>
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <div class="btn-group btn-group-lg m-2" role="group" aria-label="...">
+        <button type="button" class="btn btn-outline-primary">Left</button>
+        <button type="button" class="btn btn-outline-primary">Middle</button>
+        <button type="button" class="btn btn-outline-primary">Right</button>
+
+
+
+
+    </div>
+
+
+    <div class="btn-group m-2 d-block" role="group" aria-label="...">
+        <button type="button" class="btn btn-outline-primary float-start">Left</button>
+        <button type="button" class="btn btn-outline-primary float-start">Middle</button>
+        <button type="button" class="btn btn-outline-primary">Right</button>
+
+
+    </div>
+
+
+
+    <div class="btn-group btn-group-sm m-2 d-block" role="group" aria-label="...">
+
+        <button type="button" class="btn btn-outline-primary float-start">Left</button>
+        <button type="button" class="btn btn-outline-primary float-start">Middle</button>
+        <button type="button" class="btn btn-outline-primary">Right</button>
+
+    </div>
+
+
+
+
+
+    <div class="btn-group m-2 " role="group" aria-label="Button group with nested dropdown">
+        <button type="button" class="btn btn-primary ">1</button>
+        <button type="button" class="btn btn-primary ">2</button>
+
+        <div class="btn-group overflow-hidden" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </button>
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+            </ul>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <div class="btn-group-vertical m-2 overflow-hidden" role="group" aria-label="Button group with nested dropdown">
+        <button type="button" class="btn btn-primary">Button</button>
+        <button type="button" class="btn btn-primary">Button</button>
+
+
+
+        <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+         
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+            </ul>
+        </button>
+        </div>
+        <button type="button" class="btn btn-primary">Button</button>
+        <button type="button" class="btn btn-primary">Button</button>
+    </div>
+
+
+
+
+
+
+
+</body>
+
 </html>
